Force break-word when tweet content too long. Avoid breaking the interface.

--- a/public/style.css
+++ b/public/style.css
@@ -110,6 +110,8 @@ html{
 
 .tweet-text{
 	font-size: 0.9em;
+    margin: 5px 0;
+    word-wrap: break-word;
 }
 
 .tweet-profile {
